ci: add GH_TOKEN

--- a/.github/workflows/1-auto-release.yml
+++ b/.github/workflows/1-auto-release.yml
@@ -31,4 +31,5 @@ jobs:
       - uses: ncipollo/release-action@v1
         name: "Upload Files"
         with:
+          token: ${{ secrets.GH_TOKEN }}
           artifacts: "__build/_release/*.zip"
